--- a/index.html
+++ b/index.html
@@ -1,91 +1,65 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="UTF-8">
-  <title>Camera Distance Experiment</title>
-  <script src="https://unpkg.com/jspsych@7.3.0/jspsych.js"></script>
-  <script src="https://unpkg.com/jspsych@7.3.0/plugins/jspsych-preload.js"></script>
-  <script src="https://unpkg.com/jspsych@7.3.0/plugins/jspsych-image-keyboard-response.js"></script>
-  <script src="https://unpkg.com/jspsych@7.3.0/plugins/jspsych-survey-likert.js"></script>
-  <link href="https://unpkg.com/jspsych@7.3.0/css/jspsych.css" rel="stylesheet" />
+  <title>Camera Distance Perception Study</title>
+  <script src="jspsych/jspsych.js"></script>
+  <script src="jspsych/plugin-preload.js"></script>
+  <script src="jspsych/plugin-html-button-response.js"></script>
+  <script src="jspsych/plugin-image-keyboard-response.js"></script>
+  <script src="jspsych/plugin-survey-likert.js"></script>
+  <link href="jspsych/jspsych.css" rel="stylesheet" type="text/css" />
 </head>
 <body></body>
 <script>
 const jsPsych = initJsPsych();
 
-const trial_images = [
-  { img1: 'img/fixation.png', img2: 'img/baseballbase_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/baseballcatch_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/baseballhit_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/basketball_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/birthday_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/bowling_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/boy_game_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/boy_pulling_tree_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/bride_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/bubbles_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/construction_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/cyclist_trail_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/diver_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/falcon_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/family_toboggan_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/fieldhockey_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/fireman_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/fishing_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/footballcatch_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/footballkick_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/golfhit_C.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/golf_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/gymnastics_C.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/highjump_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/hockey_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/horsejump_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/juggler_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/lacrosse_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/lawnbowler_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/pizza_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/pool_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/soccerkick_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/soccer_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/squirrel_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/tennis_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/track_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/volleyball_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.png', img2: 'img/woman_and_dog_c.jpg', img3: 'img/mask.jpg' }
-];
+const trials = [{'img1': 'img/fixation.png', 'img2': 'img/baseballbase_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/baseballcatch_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/baseballhit_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/basketball_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/birthday_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/bowling_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/boy_game_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/boy_pulling_tree_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/bride_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/bubbles_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/construction_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/cyclist_trail_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/diver_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/falcon_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/family_toboggan_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/fieldhockey_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/fireman_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/fishing_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/footballcatch_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/footballkick_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/golfhit_C.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/golf_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/gymnastics_C.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/highjump_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/hockey_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/horsejump_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/juggler_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/lacrosse_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/lawnbowler_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/pizza_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/pool_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/soccerkick_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/soccer_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/squirrel_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/tennis_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/track_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/volleyball_c.jpg', 'img3': 'img/mask.jpg'}, {'img1': 'img/fixation.png', 'img2': 'img/woman_and_dog_c.jpg', 'img3': 'img/mask.jpg'}];
 
-const timeline = [];
+const preload = {
+  type: jsPsychPreload,
+  images: ['img/bowling_c.jpg', 'img/Rollarcoaster 1.png', 'img/bubbles_c.jpg', 'img/pizza_c.jpg', 'img/fixation.png', 'img/rollarcoaster 2.png', 'img/gymnastics_C.jpg', 'img/fieldhockey_c.jpg', 'img/bride_c.jpg', 'img/golfhit_C.jpg', 'img/boy_pulling_tree_c.jpg', 'img/construction_c.jpg', 'img/baseballcatch_c.jpg', 'img/horsejump_c.jpg', 'img/lacrosse_c.jpg', 'img/soccerkick_c.jpg', 'img/birthday_c.jpg', 'img/volleyball_c.jpg', 'img/basketball_c.jpg', 'img/squirrel_c.jpg', 'img/soccer_c.jpg', 'img/woman_and_dog_c.jpg', 'img/diver_c.jpg', 'img/highjump_c.jpg', 'img/boy_game_c.jpg', 'img/mask.jpg', 'img/tennis_c.jpg', 'img/fishing_c.jpg', 'img/track_c.jpg', 'img/juggler_c.jpg', 'img/footballkick_c.jpg', 'img/fireman_c.jpg', 'img/lawnbowler_c.jpg', 'img/cyclist_trail_c.jpg', 'img/falcon_c.jpg', 'img/family_toboggan_c.jpg', 'img/baseballhit_c.jpg', 'img/hockey_c.jpg', 'img/footballcatch_c.jpg', 'img/baseballbase_c.jpg', 'img/pool_c.jpg', 'img/golf_c.jpg']
+};
 
-trial_images.forEach(trial => {
-  timeline.push(
-    {
-      type: jsPsychImageKeyboardResponse,
-      stimulus: trial.img1,
-      choices: "NO_KEYS",
-      trial_duration: 800
-    },
-    {
-      type: jsPsychImageKeyboardResponse,
-      stimulus: trial.img2,
-      choices: "NO_KEYS",
-      trial_duration: 250
-    },
-    {
-      type: jsPsychImageKeyboardResponse,
-      stimulus: trial.img3,
-      choices: "NO_KEYS",
-      trial_duration: 42
-    },
-    {
-      type: jsPsychSurveyLikert,
-      questions: [{
-        prompt: '<img src="' + trial.img2 + '" style="max-height:300px;"><br><br>Compared to when you first saw this image, the camera distance is...',
-        labels: ["Much farther away", "Slightly farther", "The same", "Slightly closer", "Much closer"],
-        required: true
-      }]
-    }
-  );
-});
+const instructions = {
+  type: jsPsychHtmlButtonResponse,
+  stimulus: '<p>Welcome to the study. Press continue to begin.</p>',
+  choices: ['Continue']
+};
+
+const trial_blocks = trials.map(trial => [
+  {
+    type: jsPsychImageKeyboardResponse,
+    stimulus: trial.img1,
+    choices: "NO_KEYS",
+    trial_duration: 800
+  },
+  {
+    type: jsPsychImageKeyboardResponse,
+    stimulus: trial.img2,
+    choices: "NO_KEYS",
+    trial_duration: 250
+  },
+  {
+    type: jsPsychImageKeyboardResponse,
+    stimulus: trial.img3,
+    choices: "NO_KEYS",
+    trial_duration: 42
+  },
+  {
+    type: jsPsychSurveyLikert,
+    questions: [{
+      prompt: `<div style="text-align:center;">
+                <img src="${trial.img2}" style="max-height:300px;"><br><br>
+                Compared to when you first saw this image, the camera distance is...
+               </div>`,
+      labels: ["Much farther away", "Slightly farther", "The same", "Slightly closer", "Much closer"],
+      required: true
+    }]
+  }
+]).flat();
+
+const timeline = [preload, instructions, ...trial_blocks];
 
 jsPsych.run(timeline);
 </script>
