--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Camera Distance Experiment</title>
+  <title>HOnours 2025 pilot</title>
   <script src="https://unpkg.com/jspsych@6.3.1/jspsych.js"></script>
   <script src="https://unpkg.com/jspsych@6.3.1/plugins/jspsych-preload.js"></script>
   <script src="https://unpkg.com/jspsych@6.3.1/plugins/jspsych-image-keyboard-response.js"></script>
@@ -99,7 +99,7 @@
         },
         body: "data=" + encodeURIComponent(csvData)
       }).then(() => {
-        alert("Thank you! Your responses have been saved.");
+        window.location.href = "https://adelaideunisop.syd1.qualtrics.com/jfe/form/SV_3VFqrmNxkKjcuXQ"; // Replace this
       });
     }
   });
