--- a/index.html
+++ b/index.html
@@ -87,21 +87,24 @@
   });
 
   jsPsych.init({
-    timeline: timeline,
-    on_finish: function () {
-      const csvData = jsPsych.data.get().csv();
+  timeline: timeline,
+  on_finish: function () {
+    const csvData = jsPsych.data.get().csv();
 
-      fetch("https://script.google.com/macros/s/AKfycbxwtwFOFowkuQEQU8Iy91oEjWkoya9VmGdTIcqV4-YeCOqjaq-8pa2qz6nv5RJ7kFHW/exec", {
-        method: "POST",
-        mode: "no-cors",
-        headers: {
-          "Content-Type": "application/x-www-form-urlencoded"
-        },
-        body: "data=" + encodeURIComponent(csvData)
-      }).then(() => {
-        window.location.href = "https://adelaideunisop.syd1.qualtrics.com/jfe/form/SV_3VFqrmNxkKjcuXQ"; // Replace this
-      });
-    }
-  });
+    fetch("https://script.google.com/macros/s/AKfycbxwtwFOFowkuQEQU8Iy91oEjWkoya9VmGdTIcqV4-YeCOqjaq-8pa2qz6nv5RJ7kFHW/exec", {
+      method: "POST",
+      mode: "no-cors",
+      headers: {
+        "Content-Type": "application/x-www-form-urlencoded"
+      },
+      body: "data=" + encodeURIComponent(csvData)
+    });
+
+    // Delay redirect to allow time for data to be sent
+    setTimeout(function () {
+      window.location.href = "https://adelaideunisop.syd1.qualtrics.com/jfe/form/SV_3VFqrmNxkKjcuXQ";
+    }, 1000); // 1000 ms = 1 second
+  }
+});
 </script>
 </html>
