--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       {
         type: 'survey-likert',
         questions: [{
-          prompt:           prompt: '<img src="' + trial.img2 + '" style="max-height:300px;"><br><br>Compared to when you first saw this image, the camera distance is...',
+          prompt:    '<img src="' + trial.img2 + '" style="width:500px; height:auto; display:block; margin:0 auto;"><br><br>Compared to when you first saw this image, the camera distance is...',
           labels: ["Much farther away", "Slightly farther", "The same", "Slightly closer", "Much closer"],
           required: true
         }]
