--- a/index.html
+++ b/index.html
@@ -60,26 +60,26 @@
     timeline.push(
       {
         type: 'image-keyboard-response',
-        stimulus: '<img src="' + trial.img1 + '" style="width:500px; height:auto; display:block; margin:0 auto;">',
+        stimulus: trial.img1,
         choices: jsPsych.NO_KEYS,
         trial_duration: 800
       },
       {
         type: 'image-keyboard-response',
-        stimulus: '<img src="' + trial.img2 + '" style="width:500px; height:auto; display:block; margin:0 auto;">',
+        stimulus: trial.img2,
         choices: jsPsych.NO_KEYS,
         trial_duration: 250
       },
       {
         type: 'image-keyboard-response',
-        stimulus: '<img src="' + trial.img3 + '" style="width:500px; height:auto; display:block; margin:0 auto;">',
+        stimulus: trial.img3,
         choices: jsPsych.NO_KEYS,
         trial_duration: 42
       },
       {
         type: 'survey-likert',
         questions: [{
-          prompt:    '<img src="' + trial.img2 + '" style="width:500px; height:auto; display:block; margin:0 auto;"><br><br>Compared to when you first saw this image, the camera distance is...',
+          prompt: '<img src="' + trial.img2 + '" style="max-height:300px;"><br><br>Compared to when you first saw this image, the camera distance is...',
           labels: ["Much farther away", "Slightly farther", "The same", "Slightly closer", "Much closer"],
           required: true
         }]
