--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     timeline.push(
       {
         type: 'image-keyboard-response',
-        stimulus: trial.img1,
+        stimulus:'<img src="' + trial.img1 + '" style="width:500px; height:auto; display:block; margin:0 auto;">',
         choices: jsPsych.NO_KEYS,
         trial_duration: 800
       },
