--- a/index.html
+++ b/index.html
@@ -14,45 +14,45 @@
 
 <script>
   const trial_images = [
-  { img1: 'img/fixation.jpg', img2: 'img/baseballbase_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/baseballcatch_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/baseballhit_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/basketball_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/birthday_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/bowling_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/boy_game_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/boy_pulling_tree_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/bride_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/bubbles_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/construction_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/cyclist_trail_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/diver_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/falcon_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/family_toboggan_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/fieldhockey_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/fireman_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/fishing_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/footballcatch_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/footballkick_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/golfhit_C.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/golf_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/gymnastics_C.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/highjump_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/hockey_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/horsejump_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/juggler_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/lacrosse_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/lawnbowler_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/pizza_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/pool_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/soccerkick_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/soccer_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/squirrel_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/tennis_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/track_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/volleyball_c.jpg', img3: 'img/mask.jpg' },
-  { img1: 'img/fixation.jpg', img2: 'img/woman_and_dog_c.jpg', img3: 'img/mask.jpg' }
-];
+    { img1: 'img/fixation.png', img2: 'img/baseballbase_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/baseballcatch_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/baseballhit_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/basketball_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/birthday_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/bowling_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/boy_game_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/boy_pulling_tree_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/bride_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/bubbles_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/construction_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/cyclist_trail_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/diver_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/falcon_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/family_toboggan_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/fieldhockey_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/fireman_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/fishing_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/footballcatch_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/footballkick_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/golfhit_C.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/golf_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/gymnastics_C.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/highjump_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/hockey_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/horsejump_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/juggler_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/lacrosse_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/lawnbowler_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/pizza_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/pool_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/soccerkick_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/soccer_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/squirrel_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/tennis_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/track_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/volleyball_c.jpg', img3: 'img/mask.jpg' },
+    { img1: 'img/fixation.png', img2: 'img/woman_and_dog_c.jpg', img3: 'img/mask.jpg' }
+  ];
 
   const timeline = [];
 
@@ -60,7 +60,7 @@
     timeline.push(
       {
         type: 'image-keyboard-response',
-        stimulus: trial.img1 
+        stimulus: trial.img1,
         choices: jsPsych.NO_KEYS,
         trial_duration: 800
       },
@@ -79,7 +79,7 @@
       {
         type: 'survey-likert',
         questions: [{
-          prompt: '<img src="' + trial.img2 + '" style="max-height:300px;"><br><br>Compared to when you first saw this image, the camera distance is...',
+          prompt: '<img src="' + trial.img2 + '" style="max-height:800px;"><br><br>Compared to when you first saw this image, the camera distance is...',
           labels: ["Much farther away", "Slightly farther", "The same", "Slightly closer", "Much closer"],
           required: true
         }]
