--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     { img1: 'img/fixation.png', img2: 'img/track_c.jpg', img3: 'img/mask.jpg' },
     { img1: 'img/fixation.png', img2: 'img/volleyball_c.jpg', img3: 'img/mask.jpg' },
     { img1: 'img/fixation.png', img2: 'img/woman_and_dog_c.jpg', img3: 'img/mask.jpg' }
-  ];
+ ];
 
-  const preload_images = trial_images.flatMap(trial => [trial.img1, trial.img2, trial.img3]);
+  const timeline = [];
 
 timeline.push({
   type: 'preload',
