--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   timeline.push({
     type: 'preload',
     images: preload_images,
-    message: '<p>Loading images…</p><p><strong>Please wait.</strong> The experiment will begin automatically.</p>'
+    message: '<p>Loading images…</p><p><strong>Please wait.</strong> The experiment will begin automatically. Look directly at the centre of the screen.</p>'
   });
 
   const fixation = "https://raw.githubusercontent.com/greencoglab/Honours-2025/main/img/fixation.png";
