--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
   <script src="https://unpkg.com/jspsych@6.3.1/plugins/jspsych-preload.js"></script>
   <script src="https://unpkg.com/jspsych@6.3.1/plugins/jspsych-image-keyboard-response.js"></script>
   <script src="https://unpkg.com/jspsych@6.3.1/plugins/jspsych-survey-likert.js"></script>
+  <script src="https://unpkg.com/jspsych@6.3.1/plugins/jspsych-html-keyboard-response.js"></script>
   <link href="https://unpkg.com/jspsych@6.3.1/css/jspsych.css" rel="stylesheet" />
+  <style>
+    .padded-image {
+      max-height: 800px;
+      display: block;
+      margin: 100px auto;
+    }
+  </style>
 </head>
 <body></body>
 
@@ -60,38 +68,37 @@
   timeline.push({
     type: 'preload',
     images: preload_images,
-    message: '<p>Loading images…</p><p><strong>Please wait.</strong> The experiment will begin automatically. Look directly at the centre of the screen.</p>'
+    message: '<p>Loading images…</p><p><strong>Please wait.</strong> The experiment will begin automatically.</p>'
   });
 
   const fixation = "https://raw.githubusercontent.com/greencoglab/Honours-2025/main/img/fixation.png";
   const mask = "https://raw.githubusercontent.com/greencoglab/Honours-2025/main/img/mask.jpg";
-
   const target_images = preload_images.filter(img => img.includes('_c.jpg'));
 
   target_images.forEach(img_url => {
     timeline.push(
       {
-        type: 'image-keyboard-response',
-        stimulus: fixation,
+        type: 'html-keyboard-response',
+        stimulus: `<img src="${fixation}" class="padded-image">`,
         choices: jsPsych.NO_KEYS,
         trial_duration: 800
       },
       {
-        type: 'image-keyboard-response',
-        stimulus: img_url,
+        type: 'html-keyboard-response',
+        stimulus: `<img src="${img_url}" class="padded-image">`,
         choices: jsPsych.NO_KEYS,
         trial_duration: 250
       },
       {
-        type: 'image-keyboard-response',
-        stimulus: mask,
+        type: 'html-keyboard-response',
+        stimulus: `<img src="${mask}" class="padded-image">`,
         choices: jsPsych.NO_KEYS,
         trial_duration: 42
       },
       {
         type: 'survey-likert',
         questions: [{
-          prompt: `<img src="${img_url}" style="max-height:800px;"><br><br>Compared to when you first saw this image, the camera distance is...`,
+          prompt: `<img src="${img_url}" class="padded-image"><br><br>Compared to when you first saw this image, the camera distance is...`,
           labels: ["Much farther away", "Slightly farther", "The same", "Slightly closer", "Much closer"],
           required: true
         }]
